--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/papaparse": "^5.3.7",
     "csv": "^6.3.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
